--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 pymongo==4.6.0
-motor==3.3.2
 python-dotenv==1.0.0
-PyJWT==2.8.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-bcrypt==4.1.2
-dnspython==2.4.2
 pydantic==2.5.0
