--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 pymongo==4.6.0
+motor==3.3.2
 python-dotenv==1.0.0
 pydantic==1.10.12
 PyJWT==2.8.0
 python-multipart==0.0.6
+dnspython==2.4.2
