--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ pydantic==1.10.12
 PyJWT==2.8.0
 python-multipart==0.0.6
 dnspython==2.4.2
+passlib==1.7.4
+bcrypt==4.1.2
+python-jose==3.3.0
+email-validator==1.3.1
